Bài tập về nhà buôi 3

--- a/hw/Unit03/Task01.html
+++ b/hw/Unit03/Task01.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="jquery-3.4.1.min.js"></script>
     <style>
     	legend{
     		font-weight: bold;
@@ -24,6 +25,7 @@
     		padding-top: 10%;
     	}
     </style>
+
 </head>
 <body>
     <div class="container">
@@ -54,28 +56,53 @@
                 <label for="" style="float: left;">Giới tính</label>
                 <table>
                 	<tr>
-	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Nam</td>
-	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Nữ</td>
-	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Khá</td>
+	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" name="gender">Nam</td>
+	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" name="gender">Nữ</td>
+	                	<td><input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" name="gender">Khác</td>
 	                </tr>	
                 </table>
-                <!-- <div>
-	                <input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Nam
-	            </div>
-	            <div>
-	                <input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Nữ
-	            </div>
-	            <div>
-	                <input style="float: left;width: 20%;font-size: 16px;" type="radio" class="form-control" id="" name="gender">Khác
-	            </div> -->
             </div>
 
             <div class="form-group">
                 <label for="">Địa chỉ</label>
                 <input type="text" class="form-control" id="" placeholder="Nhập vào địa chỉ" name="address">
             </div>
-            <button type="submit" class="btn btn-primary">Lưu thông tin</button>
+            <button type="submit" class="btn btn-primary" name="save-session">Lưu thông tin</button>
         </form>
     </div>
+	<!-- <script type="text/javascript">
+		$(document).ready(function() {
+		 
+	        //Khi bàn phím được nhấn và thả ra thì sẽ chạy phương thức này
+	        $("#formDemo").validate(){
+	            rules: {
+	                user: "required",
+	                StName: "required",
+	                phone: {
+	                	required: true,
+	                	length: 10
+	                },
+	                mail: "required",
+	                gender: "required",
+	                address: {
+	                    required: true
+	                }
+	            },
+	            messages: {
+	                user: "Vui lòng nhập mã sinh viên!",
+	                StName: "Vui lòng nhập tên!",
+	                phone: {
+	                	required: "Vui lòng nhấp số điện thoại!",
+	                	length: "Số điện thoại phải có 10 số!"
+	                },
+	                mail: "Vui lòng nhập email!",
+	                gender: "Vui lòng chọn!",
+	                address: {
+	                    required: "Vui lòng nhập địa chỉ!"
+	                }
+	            }
+	        };
+	    });
+	</script> -->
 </body>
 </html>
